--- a/index.html
+++ b/index.html
@@ -7,20 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="mizero adrien">
     <link rel="stylesheet" href="index.css">
+    <sript src="index.js"></sript>
+    <!-- <link rel="login" href="loginform.html"> -->
+    <!-- <script src="<box-icon name='home-alt-2'></box-icon>"></sript> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
+    <!-- <a href="loginform.html" name="login" class="log" target="_blank"></a> -->
     <header>
+        <!-- <img src="midimg/icon.jpg" width="30px" height="30px"> -->
+        <i style="font-size: 60px;" class="fa-solid fa-bars"></i>
    <h1>
     <div class="animation">welcome to kigali online shopping</div>
     </h1>
     <div class="deal">Adrien deal</div>
     <nav class="start">
-        <a href="#">home</a>
+        <button class="log"><a href="loginform.html" target="display">login</a></button>
         <a href="#">product</a>
         <a href="#">service</a>
         <a href="#">contact</a>
+        <a href="#">shipping</a>
     </nav>
     </header>
+    <script>
+        console.log('hello');
+    </script>
    <br>
    <br>
    <br>
@@ -29,14 +40,14 @@
    <br>
    <br>
    <br>
-   <label name="search">
-    <input type="search" id="search">
+   <label for="search">search: </label>
+    <input type="search" id="search" placeholder="search">
+    <i class="fa-solid fa-magnifying-glass"></i>
     <button type="submit" id="submit">submit</button>
-   </label>
    <br>
    <br>
    <nav class="up">
-    <a href="#">men's fashion</a> 
+    <a href="men.html" target="_blank">men's fashion</a> 
     <a href="#">women's fashion</a>
     <a href="#" >home kits</a>
     <a href="#"> kitchen</a>
@@ -45,75 +56,116 @@
     <br>
     <br>
     <br>
-    <br>
    </nav>
-   <img src="images/shopping image.jpg" height="400px;" width="100%">
+   <br><br>
+    <div class="pop">
+        <span style="font-weight: 700" >popular<span>
+        <ul>
+    <!-- style="list-style-type: none;" -->
+        <li><a href="#">trousers</a></li>
+        <li><a href="#">shoes</a></li>
+        <li><a href="#">mobile phones</a></li>
+        <li><a href="#">computer</a></li>
+        <li><a href="#">computer</a></li>
+        <li><a href="#">drinks</a></li>
+        <li><a href="#">kitchen</a></li>
+    </ul>
+    </div>
+   <img src="image/shopping image.jpg" height="400px;" width="80% right;">
+<script>
+    // window.alert('hi! there you go');
+    </script>
    <p><span><b>Adrien deal</b></span> is kigali's leading pure-play value Ecommerce platform. Founded in 2023 by <strong>mizero adrien</strong>, adrien deal is one of the top four online lifestyle shopping destinations of Rwanda. adrien deal brings together a wide assortment of good quality and value- priced merchandise on its platform. adriendeal's vision is to enable the shoppers to experience the joy of living their aspirations through reliable, value-for-money shopping. With a personalized, multilingual interface and cutting edge technology, adriendeal has simplified the shopping experience for its value-conscious buyers by showcasing the most relevant products- products that are a good functional fit with their needs and of a quality that lasts- thereby delivering true value to its customers. With its commitment to high service standards, adriendeal suppliers operate under a well structured ecosystem that enables them to offer great quality products at affordable prices. With majority of the value-seeking, middle-income, price-conscious buyers coming from  adriendeal is part of the AceVector Group and one of kigali’s best-known e-commerce companies with an exclusive focus on the value segment</p>
    <h2>trending product</h2>
-   <div class="img">
-    <img src="midimg/men.webp" width="250px">
-    <img src="midimg/download.jpg" width="100px">
-    <img src="midimg/IMG-20230806-WA0022.jpg" width="250px">
-    <img src="midimg/og.webp" width="250px">
-    <img src="midimg/house.jpg" width="250px">
-   </div>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-   <a href="/"><nav class="division"><b>100% SECURITY PAYMENT</b> <br>moving your card detail to a much more secured place</nav></a>
-   <a href="/"><nav class="division"><b>TRUST PAY</b> <br>100%payment protection</nav></a>
-   <a href="/"><nav class="division"><b>HELP CENTER</b> <br>got a question?look our FAQ and submit your querry</nav></a>
-   <a href="/"><nav class="division"><b>SHOP BY APPP</b> <br>download our free app and get exciting opportunity</nav></a>
+   <nav class="img">
+     <div class="i1"><i style="color: red;" class="fa-solid fa-cart-shopping"></i><del>20$</del>15$<a href="#"><img src="midimg/men.webp" width="300px" height="400px"></a></div>
+     <!-- <img src="midimg/download.jpg" width="100px"> -->
+    <div class="i2"><i style="color: red;" class="fa-solid fa-cart-shopping"></i>10% discount<a href="#"><img src="midimg/IMG-20230806-WA0022.jpg" width="250px" height="400px"></a></div>
+    <div class="i3"><i style="color: red;" class="fa-solid fa-cart-shopping"></i>5%discount<a href="#"><img src="midimg/og.webp" width="300px" height="400px"></a></div>
+     <div class="i4"><i style="color: red;" class="fa-solid fa-cart-shopping"></i>10% discount<a href="#"><img src="midimg/house.jpg" width="400px" height="400px"></a></div>
+   </nav>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<nav class="second">
+    <div class="s1"><a href="#"><img src="midimg/IMG-20220327-WA0017.jpg" height="600px"  alt="<i style="color: red;" class="fa-solid fa-cart-shopping"><del>50$</del></i>45$"></a></div>
+    <div class="s1"><a href="#"><img src="midimg/second1.jpg" height="600px"  alt=""></a></div>
 </nav>
-<main>
-    <section>
-        <p>policy info</p>
-        <ul>
-            <li>privacy and policy</li>
-            <li>terms of sale</li>
-            <li>certification</li>
-            <li>service</li>
-            <li>FAQ</li>
-        </ul>
-    </section>
-    <aside>
-        <p>campany</p>
-        <ul>
-            <li>location</li>
-            <li>career</li>
-            <li>blog</li>
-            <li>website</li>
-            <li>contact us</li>
-        </ul>
-    </aside>
-    <aside>
-        <p>Activites</p>
-        <ul>
-            <li>shop</li>
-            <li>sell</li>
-            <li>media</li>
-        </ul>
-    </aside>
-</main>
-<aside>
-    <p>popular</p>
-    <ul>
-        <li>trousers</li>
-        <li>shoes</li>
-        <li>mobile phones</li>
-        <li>computer</li>
-        <li>computer</li>
-        <li>drinks</li>
-        <li>kitchen</li>
-    </ul>
-</aside>
+<nav class="second2">    
+    <div class="s1"><a href="#"><img src="midimg/second2.jpeg" height="600px"  alt=""></a></div>
+    <div class="s1"><a href="#"><img src="midimg/women.webp" height="600px" width="100%" alt="big"></a></div>
+</nav>
+<hr><hr>
+   <div class="division"><a href="/"><b>100% SECURITY PAYMENT</b> <br>moving your card detail to a much more secured place</a><br><i style="font-size: 40px;"class="fa-duotone fa-credit-card"></i></div>
+   <div class="division"> <i class="fa-solid fa-money-check-dollar-pen"></i><a href="/"><b>TRUST PAY</b><br>100%payment protection</a></div>
+   <div class="division"><a href="/"><b>HELP CENTER</b><br>got a question?look our FAQ and submit your querry</a>
+    <i class="fa-sharp fa-solid fa-people-pants"></i></div>
+   <div class="division"><a href="/"><b>SHOP BY APPP</b><br>download our free app and get exciting opportunity</a></div>
+   <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<form>
+    <label for="fullnames">fullnames:</label>
+    <input type="text"  placeholder="your full names">  
+    <br><br>
+    <textarea name="comment" rows="5" columns="45" placeholder="leave us a comment"></textarea>
+</form>
 <footer>
-    <div class="f">
-        <ul type="none">
-    <li><a href="mailto:admizero66@gmail.com">Email me</a></li>
-    <li><a href="tel:0736529119">call me</a></li>
-    <li><a href="#">shop now</a></li>
-    <li><a href="#">mobile app</a></li>
+    <section>
+    <div>
+        <h2>policy info</h2>
+        <ul>
+            <li><a href="#">privacy and policy</a></li>
+            <li><a href="#">terms of sale</a></li>
+            <li><a href="#">certification</a></li>
+            <li><a href="#">service</a></li>
+            <li><a href="#">FAQ</a></li>
+        </ul>
+        </div>
+        <br>
+    <div>
+        <h2>campany</h2>
+        <ul>
+            <li><a href="#">location</a></li>
+            <li><a href="#">career</a></li>
+            <li><a href="#">blog</a></li>
+            <li><a href="#">website</a></li>
+            <li><a href="#">contact us</a></li>
         </ul>
     </div>
+    <div>
+        <h2>Activites</h2>
+        <ul>
+            <li><a href="#">shop</a></li>
+            <li><a href="#">sell</a></li>
+            <li><a href="#">media</a></li>           
+        </ul>
+    </div>
+    <div class="f">
+        <h2>contact</h2>
+        <ul>
+            <li><a href="mailto:admizero66@gmail.com">Email me</a></li>
+            <li><a href="tel:0736529119">call me</a></li>
+            <li><a href="#">shop now</a></li>
+            <li><a href="#">mobile app</a></li>
+        </ul>
+    </div>
+    <!-- <hr> -->
+    </section>
+    <hr>
+    <div class="socialicon">
+       <!-- <i class="fa-fa-search" ></i> -->
+       <i class="fa-brands fa-youtube"></i>
+       <i class="fa-brands fa-whatsapp"></i>
+       <i class="fa-brands fa-instagram"></i>
+       <i class="fa-brands fa-github"></i>
+       <i class="fa-brands fa-facebook"></i>
+       <i class="fa-duotone fa-credit-card"></i>
+       <!-- <i class="fa-solid fa-cart-shopping"></i> -->
+       
+       
+<!--        
+       <i class="fa-sharp fa-solid fa-people-pants"></i> -->
+       <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
+       <!-- <box-icon type='logo' name='gmail'></box-icon> -->
+    </div>
+    <!-- </section> -->
     <p id="copy">&copy;Mizero adrien allright reserved</p>
 </footer>
 </body>
